// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildExtrinsicPayload adds DCA params 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Sol": Uint8Array [
        44,
        36,
        125,
        194,
        57,
        131,
        79,
        234,
        192,
        236,
        219,
        197,
        7,
        10,
        126,
        11,
        93,
        15,
        70,
        45,
        9,
        233,
        235,
        168,
        113,
        173,
        30,
        185,
        119,
        4,
        72,
        35,
      ],
    },
    "retry_duration": 100,
  },
  {
    "chunk_interval": 5,
    "number_of_chunks": 100,
  },
]
`;

exports[`buildExtrinsicPayload adds affiliates 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [
    {
      "account": "0x7a467c9e1722b35408618a0cffc87c1e8433798e9c5a79339a10d71ede9e9d79",
      "bps": 10,
    },
  ],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds ccm params: dummy cf params 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  {
    "cf_parameters": "0x",
    "gas_budget": "0x75bcd15",
    "message": "0xdeadbeef",
  },
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds ccm params: with cf params 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  {
    "cf_parameters": "0x1234",
    "gas_budget": "0x75bcd15",
    "message": "0xdeadbeef",
  },
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds max boost fee 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  30,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Arbitrum ) 1`] = `
[
  "ArbEth",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Arb": Uint8Array [
        165,
        106,
        107,
        226,
        59,
        108,
        243,
        157,
        148,
        72,
        255,
        110,
        137,
        124,
        41,
        196,
        28,
        143,
        189,
        255,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2PKH) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Btc": "0x31505956536f6566744650344556424e336f7538765a63746b684474684a616d7670",
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2SH) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Btc": "0x33326b3535464139334d5971626a684c6b39686f6b443350363636567a3951714b62",
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2WSH) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Btc": "0x626331717771646736737175736e6133386534363739356174393579753961746d38617a7a6d7976636b756c6363376b79746c63636b78737776767a656a",
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2WSH) 2`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Btc": "0x62633171656b6c657038356e746a7a34363035647264733661777739753071723436717a72763578737764333575686a756a38616866637167663668616b",
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin Taproot) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Btc": "0x62633170637774716138746a6e71377279356e6d6630613975647a6e366e6661717a6d78646a6a366565373739713268366335386e7978737335686b6761",
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Ethereum ) 1`] = `
[
  "Eth",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Eth": Uint8Array [
        165,
        106,
        107,
        226,
        59,
        108,
        243,
        157,
        148,
        72,
        255,
        110,
        137,
        124,
        41,
        196,
        28,
        143,
        189,
        255,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Polkadot hex) 1`] = `
[
  "Dot",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Dot": Uint8Array [
        42,
        251,
        169,
        39,
        142,
        48,
        204,
        246,
        166,
        206,
        179,
        168,
        182,
        227,
        54,
        183,
        0,
        104,
        240,
        69,
        198,
        102,
        242,
        231,
        244,
        249,
        204,
        95,
        71,
        219,
        137,
        114,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Polkadot ss58) 1`] = `
[
  "Dot",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Dot": Uint8Array [
        42,
        251,
        169,
        39,
        142,
        48,
        204,
        246,
        166,
        206,
        179,
        168,
        182,
        227,
        54,
        183,
        0,
        104,
        240,
        69,
        198,
        102,
        242,
        231,
        244,
        249,
        204,
        95,
        71,
        219,
        137,
        114,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Solana base58) 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Sol": Uint8Array [
        44,
        36,
        125,
        194,
        57,
        131,
        79,
        234,
        192,
        236,
        219,
        197,
        7,
        10,
        126,
        11,
        93,
        15,
        70,
        45,
        9,
        233,
        235,
        168,
        113,
        173,
        30,
        185,
        119,
        4,
        72,
        35,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Solana hex) 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Sol": Uint8Array [
        44,
        36,
        125,
        194,
        57,
        131,
        79,
        234,
        192,
        236,
        219,
        197,
        7,
        10,
        126,
        11,
        93,
        15,
        70,
        45,
        9,
        233,
        235,
        168,
        113,
        173,
        30,
        185,
        119,
        4,
        72,
        35,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds the broker commission 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  100,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Arbitrum: to Arbitrum 1`] = `
[
  "Sol",
  "ArbEth",
  {
    "Arb": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Bitcoin: to Bitcoin 1`] = `
[
  "Sol",
  "Btc",
  {
    "Btc": "0x6263727431703738356d676138646a6333723566376166616563686c7468346c617861747932727430386e6367796477346a377a76386e703573756637657476",
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Ethereum: to Ethereum 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Polkadot (hex): to Polkadot (hex) 1`] = `
[
  "Sol",
  "Dot",
  {
    "Dot": Uint8Array [
      42,
      251,
      169,
      39,
      142,
      48,
      204,
      246,
      166,
      206,
      179,
      168,
      182,
      227,
      54,
      183,
      0,
      104,
      240,
      69,
      198,
      102,
      242,
      231,
      244,
      249,
      204,
      95,
      71,
      219,
      137,
      114,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Polkadot (ss58): to Polkadot (ss58) 1`] = `
[
  "Sol",
  "Dot",
  {
    "Dot": Uint8Array [
      42,
      251,
      169,
      39,
      142,
      48,
      204,
      246,
      166,
      206,
      179,
      168,
      182,
      227,
      54,
      183,
      0,
      104,
      240,
      69,
      198,
      102,
      242,
      231,
      244,
      249,
      204,
      95,
      71,
      219,
      137,
      114,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Solana: to Solana 1`] = `
[
  "Sol",
  "SolUsdc",
  {
    "Sol": Uint8Array [
      44,
      36,
      125,
      194,
      57,
      131,
      79,
      234,
      192,
      236,
      219,
      197,
      7,
      10,
      126,
      11,
      93,
      15,
      70,
      45,
      9,
      233,
      235,
      168,
      113,
      173,
      30,
      185,
      119,
      4,
      72,
      35,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;
